[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "beautify_print"
version = "0.1.0"
description = "A package for beautiful printing"
authors = [{name = "ChenDaiwei-99", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    # Your dependencies here
]

[project.urls]
Homepage = "https://github.com/ChenDaiwei-99/beautify_print"